# rquest-tools

./: .editorconfig  .gitignore  Hutch.CohortDiscovery.sln  README.md  RquestBridge.sln  compose.yml  docker-compose.yml  rquest-tools.sln
.config/: dotnet-tools.json
.github/: deploy.docs.yml  labeler.yml  pull_request_template.md
.github/workflows/: build.Bunny.yml  build.Hutch.Rackit.yml  build.Hutch.Relay.image.yml  build.Hutch.Relay.yml  build.Resolve.CLI.image.yml  build.Resolve.Daemon.image.yml  build.Resolve.image.yml  build.RquestBridge.yml  deploy.docs.yml  publish.Hutch.Rackit.dev.yml  release.Bunny.yml  release.Hutch.Relay.yml  release.RquestBridge.yml  release.resolve.yml  release.rquest-omop-worker.yml  test_release_workflow.yml
app/Hutch.Relay/: Dockerfile  Hutch.Relay.csproj  Program.cs  appsettings.Development.json
app/Hutch.Relay/Commands/: AddUser.cs  RunEfDatabase.cs
app/Hutch.Relay/Config/: ObfuscationOptions.cs  RabbitRelayTaskQueueOptions.cs
app/Hutch.Relay/Constants/: DefaultIdentityOptions.cs
app/Hutch.Relay/Controllers/: TaskController.cs
app/Hutch.Relay/Data/: ApplicationDbContext.cs
app/Hutch.Relay/Migrations/: 20241107124930_InitialCreate.Designer.cs  20241107124930_InitialCreate.cs  20241107154934_Create_RelayUsers_SubNodes.Designer.cs  20241107154934_Create_RelayUsers_SubNodes.cs  20241108113911_AddTaskEntities.Designer.cs  20241108113911_AddTaskEntities.cs  20241108115722_Create_RelayTasks_RelaySubTasks.Designer.cs  20241108121520_Create_RelayTasks_RelaySubTasks.Designer.cs  20241108121520_Create_RelayTasks_RelaySubTasks.cs  20241112150240_InitialCreate.Designer.cs  20241112150240_InitialCreate.cs  20241112160336_Initial.Designer.cs  20241112160336_Initial.cs  (+1 more)
app/RquestBridge/: Dockerfile  Program.cs  RquestBridge.csproj  appsettings.json
app/bunny/: Dockerfile  LICENSE  pyproject.toml
app/resolve/: Dockerfile  Dockerfile.cli  Dockerfile.daemon  README.md  pyproject.toml
app/resolve/cli/: __init__.py
app/resolve/core/: db_manager.py  execute_query.py  logger.py  obfuscation.py  parser.py  query_solvers.py  request.py  results_modifiers.py  settings.py  task_api_client.py
app/resolve/core/rquest_dto/: activity_job.py  file.py  group.py  query.py  result.py
app/resolve/daemon/: __init__.py  main.py  payload.py  polling.py  polling_controller.py  polling_temp.py  process_payload.py  query_functions.py  query_manager.py  settings.py
app/resolve/test/: test_return.py
app/rquest-omop-worker/: Dockerfile  pyproject.toml
lib/FiveSafes.Net/: FiveSafes.Net.sln
lib/Hutch.Rackit/: ApiClientOptions.cs  GlobalUsings.cs  Hutch.Rackit.csproj  README.md  RackitApiClientException.cs  TaskApiClient.cs
rquest-omop-worker/rquest_omop_worker/: query_solvers.py
rquest-omop-worker/scripts/: worker.py
samples/RackitUsage/: GenericHost.cs  JobHandler.cs  Program.cs  README.md  RackitUsage.csproj  Simple.cs
tests/Hutch.Rackit.Tests/: Hutch.Rackit.Tests.csproj
tests/Hutch.Relay.Tests/: Fixtures.cs  Hutch.Relay.Tests.csproj  UnitTest1.cs
tests/RquestBridge.Tests/: RquestBridge.Tests.csproj  TestRQuestWorkflowCrateBuilder.cs  UnitTest1.cs
website/: package-lock.json  package.json  theme.config.jsx
website/pages/: Database.mdx  Relay.mdx  Resolve.mdx  _meta.js  index.mdx
(+172 files in other folders)
